--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,5 @@ bytes = "1.2.1"
 hmac-sha256 = "1.1.4"
 hex = "0.4.3"
 serde_urlencoded = "0.7.1"
-sendgrid = "0.18.0"
+sendgrid = {version="0.18.0",features=["async"]}
+serde_json = "1.0.85"
