--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ hex = "0.4.3"
 serde_urlencoded = "0.7.1"
 sendgrid = {version="0.18.0",features=["async"]}
 serde_json = "1.0.85"
+urlencoding = "2.1.2"
